Added working filters.

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -45,6 +45,7 @@
                         [dateClass]="dateClassFn" [startAt]="date | async"></mat-calendar>
         </mat-card>
       </div>
+      <app-category-filter></app-category-filter>
     </div>
 
     <div class="pages-filters">
