--- a/src/app/pages/day/day.component.html
+++ b/src/app/pages/day/day.component.html
@@ -40,13 +40,13 @@
              [attr.class]="'day-calendar-item day-calendar-item-network--' + item.network.name + ' day-calendar-item-type--' + item.type"
              [style.--ps-day-calendar-item-background-color]="chainColors[item.network.name]"
              [title]="item.network.config.name">
-          <span class="day-calendar-item-time">{{ item.date | date: 'HH:mm' }}</span>
-          <span class="day-calendar-item-logo">
+          <div class="day-calendar-item-logo">
             <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
             <span class="day-calendar-item-logo-custom" *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</span>
-          </span>
-          <span class="day-calendar-item-block">{{ item.block }}</span>
-          <span class="day-calendar-item-description">{{ item.description }}</span>
+          </div>
+          <div class="day-calendar-item-block">{{ item.block }}</div>
+          <div class="day-calendar-item-time">{{ item.date | date: 'HH:mm' }}</div>
+          <div class="day-calendar-item-description">{{ item.description }}</div>
         </div>
       </div>
     </div>
