--- a/src/app/pages/month/month.component.html
+++ b/src/app/pages/month/month.component.html
@@ -37,13 +37,13 @@
             <div tabindex="0" *ngFor="let item of hourItems; trackBy: trackByIndex"
                  [class]="'month-calendar-item month-calendar-item-type--' + item.type + ' month-calendar-item-network--' + item.network.name"
                  [style.--ps-month-calendar-item-background-color]="chainColors[item.network.name]">
-              <span class="month-calendar-item-time">{{ item.date | date : 'HH:mm' }}</span>
-              <span class="month-calendar-item-logo">
+              <div class="month-calendar-item-time">{{ item.date | date : 'HH:mm' }}</div>
+              <div class="month-calendar-item-logo">
                 <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
                 <span class="month-calendar-item-logo-custom" *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</span>
-              </span>
-              <span class="month-calendar-item-block">{{ item.block }}</span>
-              <span class="month-calendar-item-description">{{ item.description }}</span>
+              </div>
+              <div class="month-calendar-item-block">{{ item.block }}</div>
+              <div class="month-calendar-item-description">{{ item.description }}</div>
             </div>
           </ng-container>
         </div>
