--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -45,17 +45,23 @@
   flex-direction: column;
 
   --ps-month-calendar-item-background-color: var(--ps-pages-legend-item-color);
+  overflow-x: auto;
 }
 
 .month-calendar-header-row {
   display: flex;
   height: 2em;
+  max-height: 2em;
   align-items: stretch;
   text-align: center;
+  flex: 1 1 0;
 }
 
 .month-calendar-header-column {
   flex: 1 1 0;
+  min-width: 7em;
+  background: white;
+  padding: 0 7px;
 }
 
 .month-calendar-row {
@@ -67,9 +73,11 @@
 
 .month-calendar-column {
   flex: 1 1 0;
+  min-width: 7em;
   border: solid 1px lightgrey;
   overflow-x: hidden;
   min-height: 5em;
+  padding: 4px 6px;
 
   .mat-flat-button {
     background-color: transparent;
@@ -120,51 +128,63 @@
 }
 
 .month-calendar-item {
-  margin: 5px;
-  padding: 3px 6px;
-  font-size: 11px;
-  display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
+  position: relative;
+  margin: 4px 0;
+  padding: 4px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--ps-month-calendar-item-background-color);
+  border-radius: 2px 2px 10px 10px;
+  font-size: 13px;
+  box-shadow: 2px 2px 7px 1px rgb(0 0 0 / 40%);
+
+  display: grid;
+  grid-template-columns: auto min-content;
+  grid-template-rows: min-content min-content min-content;
+  align-items: start;
+  column-gap: 4px;
 }
 
 .month-calendar-item-description {
-  font-size: 13px;
-  vertical-align: middle;
   word-break: break-word;
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 
-
 .month-calendar-item-block {
-  margin-right: 5px;
-  padding: 2px 5px;
   color: white;
   white-space: nowrap;
-  font-weight: bold;
+  padding: 0 5px;
   background: var(--ps-month-calendar-item-background-color);
-  text-shadow: -0.5px -0.5px 0 rgba(0,0,0,0.2), 0.5px -0.5px 0 rgba(0,0,0,0.2), -0.5px 0.5px 0 rgba(0,0,0,0.2), 0.5px 0.5px 0 rgba(0,0,0,0.2);
+  text-shadow: -0.5px -0.5px 0 rgba(0, 0, 0, 0.8), 0.5px -0.5px 0 rgba(0, 0, 0, 0.8), -0.5px 0.5px 0 rgba(0, 0, 0, 0.8), 0.5px 0.5px 0 rgba(0, 0, 0, 0.8);
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  justify-self: stretch;
+  text-align: center;
 }
 
 .month-calendar-item-time {
-  margin-right: 5px;
-  padding: 2px 5px;
-  border-radius: 6px;
-  background: lightgray;
-  color: black;
+  font-size: 0.8rem;
   white-space: nowrap;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  justify-self: end;
+}
+
+.month-calendar-item-logo {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
 .month-calendar-item-logo img {
   height: 20px;
   width: 20px;
-  margin-right: 5px;
 }
 
 .month-calendar-item-logo-custom {
   display: inline-block;
   height: 20px;
   min-width: 20px;
-  margin-right: 5px;
   border: solid 1px lightgray;
   text-align: center;
 }
