--- a/src/app/pages/week/week.component.scss
+++ b/src/app/pages/week/week.component.scss
@@ -38,12 +38,14 @@
 }
 
 .week-calendar {
+  position: relative;
   grid-area: calendar;
   display: grid;
-  grid-template-columns: 90px repeat(7, minmax(0, 1fr));
+  grid-template-columns: 90px repeat(7, minmax(7em, 1fr));
   min-width: 100%;
   min-height: 100%;
   --ps-week-calendar-item-background-color: lightgray;
+  overflow-x: auto;
 }
 
 .week-calendar-header-column {
@@ -62,6 +64,10 @@
 .week-calendar-column--left {
   padding-left: 6px;
   border-left: none;
+  position: sticky;
+  left: 0;
+  background: white;
+  z-index: 2;
 }
 
 .week-calendar-timezone,
@@ -72,6 +78,8 @@
 }
 
 .week-calendar-column {
+  padding: 4px 6px;
+
   .mat-flat-button {
     background-color: transparent;
   }
@@ -126,50 +134,62 @@
 
 .week-calendar-item {
   position: relative;
-  margin: 5px;
-  padding: 3px 6px;
-  font-size: 11px;
-  display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
+  margin: 4px 0;
+  padding: 4px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--ps-week-calendar-item-background-color);
+  border-radius: 2px 2px 10px 10px;
+  font-size: 13px;
+  box-shadow: 2px 2px 7px 1px rgb(0 0 0 / 40%);
+
+  display: grid;
+  grid-template-columns: auto min-content;
+  grid-template-rows: min-content min-content min-content;
+  align-items: start;
+  column-gap: 4px;
 }
 
 .week-calendar-item-description {
-  font-size: 13px;
-  vertical-align: middle;
   word-break: break-word;
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 
 .week-calendar-item-block {
-  margin-right: 5px;
-  padding: 2px 5px;
   color: white;
   white-space: nowrap;
-  font-weight: bold;
+  padding: 0 5px;
   background: var(--ps-week-calendar-item-background-color);
-  text-shadow: -0.5px -0.5px 0 rgba(0, 0, 0, 0.2), 0.5px -0.5px 0 rgba(0, 0, 0, 0.2), -0.5px 0.5px 0 rgba(0, 0, 0, 0.2), 0.5px 0.5px 0 rgba(0, 0, 0, 0.2);
+  text-shadow: -0.5px -0.5px 0 rgba(0, 0, 0, 0.8), 0.5px -0.5px 0 rgba(0, 0, 0, 0.8), -0.5px 0.5px 0 rgba(0, 0, 0, 0.8), 0.5px 0.5px 0 rgba(0, 0, 0, 0.8);
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  justify-self: stretch;
+  text-align: center;
 }
 
 .week-calendar-item-time {
-  margin-right: 5px;
-  padding: 2px 5px;
-  border-radius: 6px;
-  background: lightgray;
-  color: black;
+  font-size: 0.8rem;
   white-space: nowrap;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  justify-self: end;
+}
+
+.week-calendar-item-logo {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
 .week-calendar-item-logo img {
   height: 20px;
   width: 20px;
-  margin-right: 5px;
 }
 
 .week-calendar-item-logo-custom {
   display: inline-block;
   height: 20px;
   min-width: 20px;
-  margin-right: 5px;
   border: solid 1px lightgray;
   text-align: center;
 }
