--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -37,15 +37,17 @@
   width: 100%;
 }
 
+.day-toolbar-date-header {
+  text-align: center;
+}
+
 .day-calendar {
   position: relative;
   grid-area: calendar;
   display: flex;
-  width: 100%;
   min-height: 100%;
   max-height: 1400px;
   flex-direction: column;
-
   --ps-day-calendar-item-background-color: lightgray;
 }
 
