--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -37,15 +37,16 @@
   width: 100%;
 }
 
+.month-toolbar-date-header {
+  text-align: center;
+}
+
 .month-calendar {
   grid-area: calendar;
   display: flex;
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
   flex-direction: column;
-
   --ps-month-calendar-item-background-color: var(--ps-pages-legend-item-color);
-  overflow-x: auto;
 }
 
 .month-calendar-header-row {
