--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -35,10 +35,14 @@
   max-width: 700px;
   justify-self: center;
   width: 100%;
+  padding: 10px 10px 0;
+  box-sizing: border-box;
 }
 
 .day-toolbar-date-header {
+  margin: 0 10px;
   text-align: center;
+  font-size: 1em;
 }
 
 .day-calendar {
