--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -17,7 +17,7 @@
  */
 
 .month-calendar-container {
-  height: 100%;
+  min-height: 100%;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: min-content auto;
@@ -32,13 +32,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   max-width: 700px;
   justify-self: center;
-  width: 100%;
+  padding: 10px 10px 0;
+  box-sizing: border-box;
 }
 
 .month-toolbar-date-header {
+  margin: 0 10px;
   text-align: center;
+  font-size: 1em;
 }
 
 .month-calendar {
@@ -50,17 +54,21 @@
 }
 
 .month-calendar-header-row {
+  position: sticky;
+  top: 50px;
+  z-index: 8000;
   display: flex;
   height: 2em;
   max-height: 2em;
   align-items: stretch;
   text-align: center;
   flex: 1 1 0;
+  background: white;
+  border-bottom: solid 1px lightgrey;
 }
 
 .month-calendar-header-column {
   flex: 1 1 0;
-  min-width: 7em;
   background: white;
   padding: 0 7px;
 }
@@ -74,7 +82,7 @@
 
 .month-calendar-column {
   flex: 1 1 0;
-  min-width: 7em;
+  width: 0;
   border: solid 1px lightgrey;
   overflow-x: hidden;
   min-height: 5em;
@@ -82,6 +90,13 @@
 
   .mat-flat-button {
     background-color: transparent;
+    min-width: 36px;
+    padding: 0 6px;
+    box-sizing: border-box;
+
+    @media (max-width: 600px) {
+      font-size: 11px;
+    }
   }
 }
 
@@ -123,7 +138,6 @@
 }
 
 .month-calendar-column-label {
-  margin-left: 3px;
   padding: 2px 0;
   text-align: center;
 }
@@ -138,6 +152,7 @@
   border-radius: 2px 2px 10px 10px;
   font-size: 13px;
   box-shadow: 2px 2px 7px 1px rgb(0 0 0 / 40%);
+  overflow: hidden;
 
   display: grid;
   grid-template-columns: auto min-content;
@@ -150,6 +165,10 @@
   word-break: break-word;
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .month-calendar-item-block {
@@ -162,6 +181,10 @@
   grid-row: 2 / 3;
   justify-self: stretch;
   text-align: center;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .month-calendar-item-time {
@@ -170,6 +193,13 @@
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   justify-self: end;
+
+  @media (max-width: 600px) {
+    font-size: 11px;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    justify-self: start;
+  }
 }
 
 .month-calendar-item-logo {
@@ -180,6 +210,11 @@
 .month-calendar-item-logo img {
   height: 20px;
   width: 20px;
+
+  @media (max-width: 600px) {
+    width: 15px;
+    height: 15px;
+  }
 }
 
 .month-calendar-item-logo-custom {
@@ -188,4 +223,15 @@
   min-width: 20px;
   border: solid 1px lightgray;
   text-align: center;
+
+  @media (max-width: 600px) {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+.extra-text {
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
