--- a/src/app/pages/week/week.component.scss
+++ b/src/app/pages/week/week.component.scss
@@ -35,16 +35,20 @@
   max-width: 700px;
   justify-self: center;
   width: 100%;
+  padding: 10px 10px 0;
+  box-sizing: border-box;
 }
 
 .week-toolbar-date-header {
   text-align: center;
+  font-size: 1em;
+  margin: 0 10px;
 }
 
 .week-calendar {
   grid-area: calendar;
   display: grid;
-  grid-template-columns: 90px repeat(7, minmax(7em, 1fr));
+  grid-template-columns: 90px repeat(7, minmax(0, 1fr));
   min-height: 100%;
   --ps-week-calendar-item-background-color: lightgray;
 }
@@ -90,7 +94,7 @@
   pointer-events: none;
   grid-row-start: 2;
   grid-row-end: span 25;
-  box-shadow: inset 0px 1px 5px 0px #3f51b5;
+  box-shadow: inset 0 1px 5px 0 #3f51b5;
   z-index: 1;
 }
 
@@ -109,8 +113,10 @@
   }
 }
 
-.week-calendar-header-column--today {
-  .week-calendar-header-column-button {
+.week-calendar-header-column-button {
+  min-width: 36px;
+  padding: 0 6px;
+  .week-calendar-header-column--today & {
     border: solid 1px rgba(0, 0, 0, 0.38);
     border-radius: 6px;
   }
@@ -143,6 +149,7 @@
   border-radius: 2px 2px 10px 10px;
   font-size: 13px;
   box-shadow: 2px 2px 7px 1px rgb(0 0 0 / 40%);
+  overflow: hidden;
 
   display: grid;
   grid-template-columns: auto min-content;
@@ -155,6 +162,10 @@
   word-break: break-word;
   grid-column: 1 / 3;
   grid-row: 3 / 4;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .week-calendar-item-block {
@@ -167,6 +178,10 @@
   grid-row: 2 / 3;
   justify-self: stretch;
   text-align: center;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .week-calendar-item-time {
@@ -175,6 +190,13 @@
   grid-row: 1 / 2;
   grid-column: 2 / 3;
   justify-self: end;
+
+  @media (max-width: 600px) {
+    font-size: 11px;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    justify-self: start;
+  }
 }
 
 .week-calendar-item-logo {
@@ -185,6 +207,11 @@
 .week-calendar-item-logo img {
   height: 20px;
   width: 20px;
+
+  @media (max-width: 600px) {
+    width: 15px;
+    height: 15px;
+  }
 }
 
 .week-calendar-item-logo-custom {
@@ -193,4 +220,15 @@
   min-width: 20px;
   border: solid 1px lightgray;
   text-align: center;
+
+  @media (max-width: 600px) {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+.extra-text {
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
